# Django-TDD-Recipe

./: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini
authentication/: admin.py  models.py
authentication/migrations/: 0001_initial.py
authentication/tests/: test_admin.py  test_commands.py  test_models.py
core/: settings.py  urls.py
core/tests/: test_models.py
recipe/: models.py  serializers.py  views.py
recipe/migrations/: 0001_initial.py  0002_ingredient.py  0003_recipe.py  0004_recipe_image.py
recipe/tests/: test_ingredient_api.py  test_recipe_api.py  test_tag_api.py
user/: serializers.py
user/tests/: test_user_api.py
